web-infras/parser/tests/fixtures/babel/es2015/destructuring/error-operator-for-default/output.txt
[SyntaxError]: invalid assignment left-hand side (1,3)
1|([a += a] = a)
 | ^
